Fix font-size on mobile

--- a/static/index.css
+++ b/static/index.css
@@ -245,5 +245,9 @@
         text-align: center;
     }
 
+    .clock {
+        font-size: 1em;
+    }
+
 
 }
